# langchain-timbr

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements313.txt
.github/workflows/: install-dependencies-and-run-tests.yml
src/langchain_timbr/: config.py  identify_concept_context.py  kbclient.py  ontology_metadata.py  trigram.py
src/langchain_timbr/langchain/: execute_timbr_query_chain.py  generate_answer_chain.py  generate_timbr_sql_chain.py  identify_concept_chain.py  timbr_sql_agent.py  validate_timbr_sql_chain.py
src/langchain_timbr/langgraph/: execute_timbr_query_node.py  generate_response_node.py  generate_timbr_sql_node.py  validate_timbr_query_node.py
src/langchain_timbr/llm_wrapper/: llm_wrapper.py
src/langchain_timbr/ontology_context/: __init__.py
src/langchain_timbr/ontology_context/context_builder/: __init__.py  build_filtered.py  concept_prefilter.py  edge_index.py  fallback.py  llm_filter.py  menu_builder.py  metadata_config.py  metadata_types.py  rebuild.py  subgraph.py  validator.py
src/langchain_timbr/ontology_context/context_builder/prompts/: __init__.py  concept_prefilter_prompt.py  filter_prompt.py
src/langchain_timbr/ontology_context/ontology/: __init__.py  cardinality.py  client.py  graph.py  inverse.py  models.py  parser.py  paths.py  shared.py
src/langchain_timbr/technical_context/: __init__.py  config.py  modes.py  semantic_type.py  types.py
src/langchain_timbr/technical_context/assembly/: per_column.py
src/langchain_timbr/technical_context/extraction/: llm.py
src/langchain_timbr/utils/: _base_chain.py  benchmark.py  chain_logger.py  general.py  memory.py  prompt_service.py  timbr_llm_utils.py  timbr_utils.py
tests/: conftest.py
tests/integration/: test_chain_documentation.py  test_chain_reasoning.py  test_dynamic_metadata_context_integration.py  test_identify_concept_context_integration.py  test_kb_memory_integration.py  test_langchain_chains.py  test_memory_chains.py  test_ontology_context_integration.py  test_ontology_metadata_integration.py  test_optional_llm_integration.py  test_technical_context_integration.py  test_transitivity_overrides_integration.py
tests/standard/: test_budget_knobs_cleanup.py  test_chain_documentation.py  test_determine_concept_null_result.py  test_identify_concept_context.py  test_kb_rules.py  test_kbclient.py  test_memory_kb.py  test_note_dedup.py  test_ontology_metadata.py  test_optional_llm_integration.py  test_parse_sql_response.py  test_reanchor_metadata_context.py  test_reasoning_appendix.py  test_trigram.py  test_unit_tests.py
tests/standard/ontology_context/context_builder/: test_action_grammar.py  test_concept_prefilter.py  test_dynamic_wiring_safety.py  test_fallback.py  test_menu_builder.py  test_metadata_config.py  test_path_split.py  test_prompt_memory_expansion.py  test_rebuild.py  test_subgraph.py  test_validator.py  test_waypoint_filter.py
tests/standard/ontology_context/ontology/: test_cardinality.py  test_graph.py  test_inverse.py  test_parser.py  test_paths.py
tests/standard/statistics_loader/: test_stats_cache.py
tests/standard/technical_context/: test_technical_context_assembly.py  test_technical_context_llm_extraction.py  test_technical_context_semantic_type.py
